# LatentSync

./: .gitignore  README.md  data_processing_pipeline.sh  inference.sh  main.py  pyproject.toml  setup_env.sh  train_unet.sh
configs/unet/: stage1.yaml  stage2.yaml
eval/: eval_sync_conf.py  eval_sync_conf.sh  eval_syncnet_acc.sh  inference_videos.py
latentsync/data/: unet_dataset.py
latentsync/models/: attention.py  motion_module.py  unet_blocks.py
latentsync/pipelines/: lipsync_pipeline.py
latentsync/utils/: image_processor.py
latentsync/whisper/: audio2feature.py
preprocess/: detect_shot.py
scripts/: train_unet.py
