[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latentsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.26.1",
    "av==11.0.0",
    "decord==0.6.0",
    "diffusers==0.32.2",
    "einops==0.7.0",
    "face-alignment==1.4.1",
    "ffmpeg-python==0.2.0",
    "gradio==5.12.0",
    "huggingface-hub==0.25.2",
    "imageio==2.27.0",
    "librosa==0.10.1",
    "lpips==0.1.4",
    "mediapipe==0.10.11",
    "ninja==1.11.1.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "opencv-python==4.9.0.80",
    "pandas==2.0.3",
    "python-speech-features==0.6",
    "safetensors==0.4.2",
    "scenedetect==0.6.1",
    "torch==2.4.1",
    "torch-fidelity==0.3.0",
    "torchmetrics==1.3.1",
    "torchvision==0.19.1",
    "transformers==4.48.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "poethepoet>=0.33.1",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pyright]
include = ["src"]
exclude = ["temp"]
ignore = ["sam2"]
defineConstant = { DEBUG = false }

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.poe.tasks]

[tool.setuptools]
packages = ["latentsync"]
